Feature: Add GetLikes, GetNotifications, SaveNotifications, GetBookmarks, Add schema Notifications, Fix Location, Fix Dockerfile and Swagger
