# src/controllers/bookmarks.controllers.ts
@@ -8,6 +8,7 @@ import {
 } from '~/models/requests/Bookmark.requests'
 import bookmarksService from '~/services/bookmarks.services'
 import { BOOKMARK_MESSAGES } from '~/constants/messages'
+import { PaginationRequestQuery } from '~/models/requests/Tweet.requests'
 
 export const bookmarkTweetController = async (
   req: Request<ParamsDictionary, any, BookmarkRequestBody>,
@@ -36,5 +37,23 @@ export const unbookmarkController = async (req: Request<BookmarkRequestParams>, 
   await bookmarksService.unbookmarkService(user_id, bookmark_id)
   return res.json({
     message: BOOKMARK_MESSAGES.UNBOOKMARK_SUCCESSFULLY
+  })
+}
+
+export const getBookmarksController = async (
+  req: Request<ParamsDictionary, any, any, PaginationRequestQuery>,
+  res: Response
+) => {
+  const { user_id } = req.decoded_authorization as TokenPayload
+  const limit = Number(req.query.limit)
+  const page = Number(req.query.page)
+  const result = await bookmarksService.getBookmarksService({ user_id, limit, page })
+  return res.json({
+    message: BOOKMARK_MESSAGES.GET_BOOKMARKS_SUCCESSFULLY,
+    bookmarks: result.bookmarks,
+    current_page: page,
+    limit: limit,
+    total: result.total,
+    total_page: Math.ceil(result.total / limit)
   })
 }
