# src/routes/root.routes.ts
@@ -7,6 +7,7 @@ import bookmarksRoutes from './bookmarks.routes'
 import likesRoutes from './likes.routes'
 import searchRoutes from './search.routes'
 import conversationsRoutes from './conversations.routes'
+import notificationsRoutes from './notifications.routes'
 const rootRoutes = express.Router()
 
 rootRoutes.use('/users', userRoute)
@@ -17,5 +18,6 @@ rootRoutes.use('/likes', likesRoutes)
 rootRoutes.use('/bookmarks', bookmarksRoutes)
 rootRoutes.use('/search', searchRoutes)
 rootRoutes.use('/conversations', conversationsRoutes)
+rootRoutes.use('/notifications', notificationsRoutes)
 
 export default rootRoutes
